# pyxres-piano-roll

./: .gitignore  260708_Pyxel互換音楽エディタ設計書.md  CLAUDE.md  README.md  index.html  pyproject.toml
.claude/: launch.json
.claude/skills/bump-format/: SKILL.md
.claude/skills/verify-pyxres/: SKILL.md
.github/workflows/: deploy-pages.yml
css/: style.css
js/: app.js  audio.js  exporter.js  model.js  storage.js
js/ui/: channellane.js  dialogs.js  lists.js  pianoroll.js  property.js  transport.js
pyxel_test/: __init__.py
test/: audio.test.js  exporter.test.js  model.test.js  storage.test.js
tools/: make_test_pyxres.js  verify_with_pyxel.py
