[project]
name = "pyxel-music-editor-tools"
version = "0.1.0"
description = "Pyxel互換音楽エディタの実機検証ツール"
requires-python = ">=3.10"
dependencies = ["pyxel>=2.9"]

[project.scripts]
pyxel-test = "pyxel_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyxel_test"]
